--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,33 @@
 @import '~bootstrap/scss/bootstrap';
 @import './tailwind.css';
+
+.flip-card {
+  perspective: 1000px;
+  width: 20vw;
+  height: 20vw;
+  position: relative;
+  margin: 2vw; /* Tilføj margin for at undgå kollidering */
+}
+
+.flip-card-inner {
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
+.flip-card.flipped .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+}
