--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import '~bootstrap/scss/bootstrap';
 @import './tailwind.css';
+@import './components/AboutMeStyle.scss';
 
 .flip-card {
   perspective: 1000px;
