--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import './tailwind.css';
 @import './components/AboutMeStyle.scss';
+@import './RemoteAccessTrojans/RAT.css';
 
 .flip-card {
   perspective: 1000px;
