--- a/src/App.scss
+++ b/src/App.scss
@@ -37,3 +37,15 @@
 .image-container {
   background-color: white;
 }
+
+.transition-transform {
+  transition: transform 0.5s ease-in-out;
+}
+
+.transform {
+  transform: translateX(0);
+}
+
+.transform.-translate-x-full {
+  transform: translateX(-100%);
+}
